--- a/index.html
+++ b/index.html
@@ -240,9 +240,11 @@
     </div>
 
     <div class="affiliation-notes">
-        <p><sup>1</sup> Amazon FAR &nbsp;&nbsp;<sup>2</sup> USC &nbsp;&nbsp;
+        <p><sup>1</sup> Amazon FAR (Frontier AI & Robotics) &nbsp;&nbsp;<sup>2</sup> USC &nbsp;&nbsp;
             <sup>3</sup> Stanford University &nbsp;&nbsp;<sup>4</sup> UC Berkeley &nbsp;&nbsp;<sup>5</sup> CMU &nbsp;&nbsp;
-        <sup>†</sup> FAR Co-Lead</p>
+        <br>
+        <br>
+        <small><em style="font-weight: normal;">Work done while interning at Amazon FAR &nbsp;&nbsp;&nbsp;&nbsp; <sup>†</sup> FAR Co-Lead</em></small></p>
     </div>
     <!-- <div class="affiliation">
         <p style="text-align: center;">
@@ -268,7 +270,7 @@
             <div class="video_container_wrapper1">
                 <div class="video_container">
                     <video class="content-video" muted playsinline preload="none" controls loop>
-                        <source src="videos/carry.mov" type="video/mp4">
+                        <source src="videos/carry.mp4" type="video/mp4">
                     </video>
                     <div class="overlay-clean">Carry Box onto Back (1x)</div>
                 </div>
@@ -278,7 +280,7 @@
             <div class="video_container_wrapper1">
                 <div class="video_container">
                     <video class="content-video" muted playsinline preload="none" controls loop>
-                        <source src="videos/kneel.mov" type="video/mp4">
+                        <source src="videos/kneel.mp4" type="video/mp4">
                     </video>
                     <div class="overlay-clean">Kneel on One Knee & Lift Box (1x)</div>
                 </div>
@@ -292,7 +294,7 @@
             <div class="video_container_wrapper1">
                 <div class="video_container">
                     <video class="content-video" muted playsinline preload="none" controls loop>
-                        <source src="videos/squat.mov" type="video/mp4">
+                        <source src="videos/squat.mp4" type="video/mp4">
                     </video>
                     <div class="overlay-clean">Squat & Lift Box with Whole-Body Contact (1x)</div>
                     <div class="overlay-bottom-right" style="font-size: 2.0em;">4.5kg</div>
@@ -305,7 +307,7 @@
             <div class="video_container_wrapper1">
                 <div class="video_container">
                     <video class="content-video" muted playsinline preload="none" controls loop>
-                        <source src="videos/chair1.mov" type="video/mp4">
+                        <source src="videos/chair1.mp4" type="video/mp4">
                     </video>
                     <div class="overlay-clean">Lift Chair with Whole-Body Contact (1x)</div>
                     <div class="overlay-bottom-right" style="font-size: 2.0em;">4.5kg</div>
@@ -316,7 +318,7 @@
             <div class="video_container_wrapper1">
                 <div class="video_container">
                     <video class="content-video" muted playsinline preload="none" controls loop>
-                        <source src="videos/chair2.mov" type="video/mp4">
+                        <source src="videos/chair2.mp4" type="video/mp4">
                     </video>
                     <div class="overlay-clean">Lift Chair with Whole-Body Contact (1x)</div>
                     <div class="overlay-bottom-right" style="font-size: 2.0em;">5.5kg</div>
@@ -332,7 +334,7 @@
             <div class="video_container_wrapper1">
                 <div class="video_container">
                     <video class="content-video" muted playsinline preload="none" controls loop>
-                        <source src="videos/chair_robust1.mov" type="video/mp4">
+                        <source src="videos/chair_robust1.mp4" type="video/mp4">
                     </video>
                     <div class="overlay-clean">Lift Chair with External Perturbation (1x)</div>
                     <!-- <div class="overlay-bottom-right" style="font-size: 2.0em;">4.5kg</div> -->
@@ -343,7 +345,7 @@
             <div class="video_container_wrapper1">
                 <div class="video_container">
                     <video class="content-video" muted playsinline preload="none" controls loop>
-                        <source src="videos/chair_robust2.mov" type="video/mp4">
+                        <source src="videos/chair_robust2.mp4" type="video/mp4">
                     </video>
                     <div class="overlay-clean">Lift Chair with 5kg Payload (1x)</div>
                     <!-- <div class="overlay-bottom-right" style="font-size: 2.0em;">4.5kg</div> -->
@@ -358,7 +360,7 @@
             <div class="video_container_wrapper1">
                 <div class="video_container">
                     <video class="content-video" muted playsinline preload="none" controls loop>
-                        <source src="videos/sit.mov" type="video/mp4">
+                        <source src="videos/sit.mp4" type="video/mp4">
                     </video>
                     <div class="overlay-clean">Sit on Chair (1x)</div>
                     <div class="overlay-top-right" style="font-size: 1.0em;"><span style="color: rgb(49, 196, 25);">ResMimic (Success)</span></div>
@@ -369,7 +371,7 @@
             <div class="video_container_wrapper1">
                 <div class="video_container">
                     <video class="content-video" muted playsinline preload="none" controls loop>
-                        <source src="videos/sit_base_policy.mov" type="video/mp4">
+                        <source src="videos/sit_base_policy.mp4" type="video/mp4">
                     </video>
                     <div class="overlay-clean">Sit on Chair (1x)</div>
                     <div class="overlay-top-right" style="font-size: 1.0em;"><span style="color: rgb(196, 49, 25);">Base Policy (Failure)</span></div>
@@ -427,7 +429,7 @@
             <div class="video_container_wrapper1">
                 <div class="video_container">
                     <video class="content-video" muted playsinline preload="none" controls loop>
-                        <source src="videos/kneel.mov" type="video/mp4">
+                        <source src="videos/kneel.mp4" type="video/mp4">
                     </video>
                     <!-- <div class="overlay-clean">Whole-Body Dex Pick & Place</div> -->
                     <div class="overlay-top-right" style="font-size: 1.0em;"><span style="color: rgb(49, 196, 25);">ResMimic (Success)</span></div>
@@ -438,7 +440,7 @@
             <div class="video_container_wrapper1">
                 <div class="video_container">
                     <video class="content-video" muted playsinline preload="none" controls loop>
-                        <source src="videos/kneel_base_policy.mov" type="video/mp4">
+                        <source src="videos/kneel_base_policy.mp4" type="video/mp4">
                     </video>
                     <!-- <div class="overlay-clean">Mobile Dex Pick & Place</div> -->
                     <div class="overlay-top-right" style="font-size: 1.0em;"><span style="color: rgb(196, 49, 25);">Base Policy (Failure)</span></div>
@@ -451,7 +453,7 @@
             <div class="video_container_wrapper1">
                 <div class="video_container">
                     <video class="content-video" muted playsinline preload="none" controls loop>
-                        <source src="videos/kneel_scratch.mov" type="video/mp4">
+                        <source src="videos/kneel_scratch.mp4" type="video/mp4">
                     </video>
                     <!-- <div class="overlay-clean">Whole-Body Dex Pick & Place</div> -->
                     <div class="overlay-top-right" style="font-size: 1.0em;"><span style="color: rgb(196, 49, 25);">Train from Scratch (Failure)</span></div>
@@ -462,7 +464,7 @@
             <div class="video_container_wrapper1">
                 <div class="video_container">
                     <video class="content-video" muted playsinline preload="none" controls loop>
-                        <source src="videos/kneel_finetune.mov" type="video/mp4">
+                        <source src="videos/kneel_finetune.mp4" type="video/mp4">
                     </video>
                     <!-- <div class="overlay-clean">Mobile Dex Pick & Place</div> -->
                     <div class="overlay-top-right" style="font-size: 1.0em;"><span style="color: rgb(196, 49, 25);">Base Policy + Finetune (Failure)</span></div>
@@ -541,12 +543,12 @@
 
     // List of video sources
     const videoSources = [
-        'videos/carry.mov',
-        'videos/kneel.mov',
-        'videos/chair_robust2.mov',
-        'videos/chair2.mov',
-        'videos/sit.mov',
-        'videos/squat.mov',
+        'videos/carry.mp4',
+        'videos/kneel.mp4',
+        'videos/chair_robust2.mp4',
+        'videos/chair2.mp4',
+        'videos/sit.mp4',
+        'videos/squat.mp4',
     ];
 
     // Function to get random video source
