--- a/index.html
+++ b/index.html
@@ -240,9 +240,11 @@
     </div>
 
     <div class="affiliation-notes">
-        <p><sup>1</sup> Amazon FAR &nbsp;&nbsp;<sup>2</sup> USC &nbsp;&nbsp;
-            <sup>3</sup> Stanford University &nbsp;&nbsp;<sup>4</sup> UC Berkeley &nbsp;&nbsp;<sup>5</sup> CMU &nbsp;&nbsp;
-        <sup>†</sup> FAR Co-Lead</p>
+        <p><sup>1</sup> Amazon FAR (Frontier AI & Robotics) &nbsp;&nbsp;<sup>2</sup> USC &nbsp;&nbsp;
+            <sup>3</sup> Stanford University &nbsp;&nbsp;<sup>4</sup> UC Berkeley &nbsp;&nbsp;<sup>5</sup> CMU
+        <br>
+        <br>
+        <small><em style="font-weight: normal;">Work done while interning at Amazon FAR &nbsp;&nbsp;&nbsp;&nbsp; <sup>†</sup> FAR Co-Lead</em></small></p>
     </div>
     <!-- <div class="affiliation">
         <p style="text-align: center;">
