--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <link rel="stylesheet" href="./static/css/fontawesome.all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
   <link rel="stylesheet" href="./static/css/index.css">
-  <link rel="icon"
-    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🔄</text></svg>">
+  <link rel="icon" href="https://ae-pic-a1.aliexpress-media.com/kf/A3c11170623aa4164841a98a392beef36m.png_960x960.png_.avif" type="image/avif">
+  <link rel="icon" href="https://ae-pic-a1.aliexpress-media.com/kf/A3c11170623aa4164841a98a392beef36m.png_960x960.png_.avif" type="image/png" fallback>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script defer src="./static/js/fontawesome.all.min.js"></script>
