--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="ResMimic: From General Motion Tracking to Humanoid Whole-Body Loco-Manipultion via Residual Learning">
+  <meta name="description" content="ResMimic: From General Motion Tracking to Humanoid Whole-Body Loco-Manipulation via Residual Learning">
   <meta name="keywords" content="Humanoid, Robotics, Loco-Manipulation, Reinforcement Learning, Residual Learning">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ResMimic: From General Motion Tracking to Humanoid Whole-Body Loco-Manipultion via Residual Learning</title>
+  <title>ResMimic: From General Motion Tracking to Humanoid Whole-Body Loco-Manipulation via Residual Learning</title>
 
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
 
@@ -34,7 +34,7 @@
         <div class="columns is-centered">
           <div class="column has-text-centered">
             <h1 class="title is-1 publication-title">
-              <span class="gradient-text">ResMimic</span>: From General Motion Tracking to Humanoid Whole-Body Loco-Manipultion via Residual Learning
+              <span class="gradient-text">ResMimic</span>: From General Motion Tracking to Humanoid Whole-Body Loco-Manipulation via Residual Learning
             </h1>
 
             <div class="is-size-5 publication-authors">
@@ -47,8 +47,7 @@
                   <span class="author-block">
                     <a href="https://tml.stanford.edu/people/karen-liu/" target="_blank">C. Karen Liu</a><sup>1,3†</sup>,</span>
               <span class="author-block">
-                <a href="https://people.eecs.berkeley.edu/~pabbeel/" target="_blank">Pieter
-                  Abbeel</a><sup>1,4†</sup>,</span>
+                <a href="https://people.eecs.berkeley.edu/~pabbeel/" target="_blank">Pieter Abbeel</a><sup>1,4†</sup>,</span>
                   <span class="author-block">
                     <a href="https://www.gshi.me/" target="_blank">Guanya Shi</a><sup>1,5†</sup>,</span>
                     <span class="author-block">
@@ -73,7 +72,7 @@
               <div class="publication-links">
                 <!-- PDF Link. -->
                 <span class="link-block">
-                  <a target="_blank" href="static/pdf/_Arxiv_ResMimic.pdf"
+                  <a target="_blank" href="file/_Arxiv_ResMimic.pdf"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -146,7 +145,7 @@
   <!-- Summary -->
   <section class="section">
     <div class="container is-max-desktop">
-      <h2 class="title is-3 has-text-centered">Expreesive Whole-Body Loco-Manipultion</h2>
+      <h2 class="title is-3 has-text-centered">Expressive Whole-Body Loco-Manipulation</h2>
 
       <div class="content has-text-centered">
         <div class="columns is-multiline">
@@ -359,7 +358,12 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>
+      <pre><code>@misc{zhao2025resmimic,
+        title={ResMimic: From General Motion Tracking to Humanoid Whole-Body Loco-Manipulation via Residual Learning}, 
+        author={Siheng Zhao and Yanjie Ze and Yue Wang and C. Karen Liu and Pieter Abbeel and Guanya Shi and Rocky Duan},
+        year={2025},
+        primaryClass={cs.RO},
+  }
       </code></pre>
     </div>
   </section>
