--- a/index.html
+++ b/index.html
@@ -363,8 +363,7 @@
         author={Siheng Zhao and Yanjie Ze and Yue Wang and C. Karen Liu and Pieter Abbeel and Guanya Shi and Rocky Duan},
         year={2025},
         primaryClass={cs.RO},
-  }
-      </code></pre>
+  }</code></pre>
     </div>
   </section>
 
