--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <div class="publication-links">
                 <!-- PDF Link. -->
                 <span class="link-block">
-                  <a target="_blank" href="file/_Arxiv_ResMimic.pdf"
+                  <a target="_blank" href="file/ResMimic_paper.pdf"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
