--- a/index.html
+++ b/index.html
@@ -238,7 +238,15 @@
       <div class="content has-text-centered">
         <div class="columns is-multiline">
           <!-- Bottom two side-by-side -->
-          
+          <div class="column is-12">
+            <div class="video-container-16-9">
+              <video autoplay loop muted loading="lazy" preload="none">
+                <source src="static/videos/sit_demo.mov" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
+              <div class="video-overlay-upper-left">Sit on Chair (1x)</div>
+            </div>
+          </div>
           <div class="column is-6">
             <h4 class="title is-5 has-text-centered">ResMimic (Success ✅)</h2>
             <div class="video-container-16-9">
