--- a/index.html
+++ b/index.html
@@ -72,6 +72,16 @@
               <div class="publication-links">
                 <!-- PDF Link. -->
                 <span class="link-block">
+                  <a target="_blank" href="https://www.arxiv.org/abs/2510.05070"
+                     class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                        <i class="ai ai-arxiv"></i>
+                    </span>
+                    <span>arXiv</span>
+                  </a>
+                </span>
+                <!-- &nbsp;&nbsp;&nbsp;&nbsp; -->
+                <span class="link-block">
                   <a target="_blank" href="file/ResMimic_paper.pdf"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
@@ -80,7 +90,27 @@
                     <span>Paper</span>
                   </a>
                 </span>
-                &nbsp;&nbsp;&nbsp;&nbsp;
+                <!-- &nbsp;&nbsp;&nbsp;&nbsp; -->
+                <span class="link-block">
+                  <a target="_blank" href="https://www.youtube.com/watch?v=dadOH-TpbRk"
+                    class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="fab fa-youtube"></i>
+                    </span>
+                    <span>Video</span>
+                  </a>
+                </span>
+                <!-- &nbsp;&nbsp;&nbsp;&nbsp; -->
+                <span class="link-block">
+                  <a target="_blank" href="https://www.arxiv.org/abs/2510.05070"
+                    class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="fab fa-twitter"></i>
+                    </span>
+                    <span>tl;dr</span>
+                  </a>
+                </span>
+                <!-- &nbsp;&nbsp;&nbsp;&nbsp; -->
                 <span class="link-block">
                   <a target="_blank" href="" class="external-link button is-normal is-rounded is-dark" disabled>
                     <span class="icon">
@@ -98,18 +128,22 @@
         </div>
   </section>
 
-  <!-- <section class="hero teaser">
+  <section class="hero teaser">
     <div class="container is-max-desktop">
       <div class="hero-body">
         <div class="publication-video">
-          <iframe src="" frameborder="0"
+          <iframe src="https://www.youtube-nocookie.com/embed/dadOH-TpbRk?autoplay=1&mute=1&loop=1" frameborder="0"
             allow="autoplay; encrypted-media" allowfullscreen>
           </iframe>
         </div>
         <br>
+        <h2 class="subtitle has-text-centered">
+          We present ResMimic, a two-stage residual framework that unleashes the power of pre-trained general motion tracking policy. 
+          It enables expressive whole-body loco-manipulation with payloads up to 5.5kg without task-specific design, generalizes across poses, and exhibits reactive behavior.
+        </h2>
       </div>
     </div>
-  </section> -->
+  </section>
 
   <section class="section">
     <div class="container is-max-desktop">
