--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </span>
                 <!-- &nbsp;&nbsp;&nbsp;&nbsp; -->
                 <span class="link-block">
-                  <a target="_blank" href="https://www.arxiv.org/abs/2510.05070"
+                  <a target="_blank" href="https://x.com/SihengZhao/status/1975985531298476316"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-twitter"></i>
