--- a/index.html
+++ b/index.html
@@ -400,11 +400,14 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>@misc{zhao2025resmimic,
-        title={ResMimic: From General Motion Tracking to Humanoid Whole-Body Loco-Manipulation via Residual Learning}, 
+      <pre><code>@misc{zhao2025resmimicgeneralmotiontracking,
+        title={ResMimic: From General Motion Tracking to Humanoid Whole-body Loco-Manipulation via Residual Learning}, 
         author={Siheng Zhao and Yanjie Ze and Yue Wang and C. Karen Liu and Pieter Abbeel and Guanya Shi and Rocky Duan},
         year={2025},
+        eprint={2510.05070},
+        archivePrefix={arXiv},
         primaryClass={cs.RO},
+        url={https://arxiv.org/abs/2510.05070}, 
   }</code></pre>
     </div>
   </section>
